--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "~1.18.3",
+    "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "express": "~4.16.3",
+    "express-session": "^1.17.1",
     "lodash": "^4.17.10",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "tinyurl": "^1.1.7"
   },
   "devDependencies": {}
 }
